Fix spacing and borders

--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin: 0;
-    padding: 0;
     min-height: 100vh;
-}
-
-header, section{
 }
 
 .bg-navy{
@@ -28,7 +29,7 @@ a{
 
 h1{
     color: #f9faf8;
-    font-size: 1.125rem;
+    font-size: 2.125rem;
     font-weight: bolder;
 }
 
@@ -47,11 +48,102 @@ button{
     border-radius: 0.25rem;
     border-style: none;
     padding: 0.3125rem;
-    color: #e5e7eb
+    color: #e5e7eb;
+    width: 6em;
 }
 
 button.call{
    border-color: #e5e7eb; 
    border-style: solid;
    border: 0.25rem;
+}
+
+header.bg-navy{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: .0625em 4.6875em 4.6875em;
+}
+
+.header-main{
+    padding-top: 5em;
+    gap: 5em;
+}
+
+ol{
+    display: flex;
+    gap: 5em;
+}
+
+.top-row, .header-main{
+    display: flex;
+    justify-content: space-between;
+}
+
+.img-container{
+    width: 31.25em;
+    height: 18.75em;
+    background-color: #1f2937;
+    display: flex;
+}
+
+.header-left{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.logo-container{
+    width: 5em;
+    height: 5em;
+}
+
+img{
+   max-width: 100%;
+}
+
+img.pic-main{
+    width: 31.25em;
+    height: 18.75em;
+    object-fit: contain;
+    object-position: right;
+}
+
+/* Info section*/
+.photo-container{
+    width: 8em;
+    height 8em;
+    border-radius: 0.75em;
+}
+
+.grey-text{
+    color: #36393f;
+    width: 8em;
+    text-align: center;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3em;
+    margin: 2em;
+}
+
+.gallery{
+    display: flex;
+    justify-content: space-around;
+    gap:5em;
+}
+
+.info-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-pic{
+    border-radius: 0.75em;
 }
